[gd_scene load_steps=6 format=2]

[ext_resource path="res://Textures/quitButton.png" type="Texture" id=1]
[ext_resource path="res://Textures/sandboxButton.png" type="Texture" id=2]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Textures/settingsButton.png" type="Texture" id=4]
[ext_resource path="res://Menus/SettingsMenu.tscn" type="PackedScene" id=5]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="quitButton" type="TextureButton" parent="."]
anchor_left = 0.421
anchor_top = 0.495
anchor_right = 0.421
anchor_bottom = 0.501
margin_right = 180.0
margin_bottom = 32.0
texture_normal = ExtResource( 1 )

[node name="sandboxButton" type="TextureButton" parent="."]
anchor_left = 0.421
anchor_top = 0.312
anchor_right = 0.421
anchor_bottom = 0.312
margin_right = 180.0
margin_bottom = 32.0
texture_normal = ExtResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_top = 0.945
anchor_bottom = 0.945
margin_right = 69.0
margin_bottom = 30.0
text = "NukeLabs 2022"

[node name="settingsButton" type="TextureButton" parent="."]
anchor_left = 0.421
anchor_top = 0.398
anchor_right = 0.486
anchor_bottom = 0.398
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 4 )

[node name="Settings" parent="." instance=ExtResource( 5 )]
